--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,36 @@
  *= require_self
  *= require_tree .
  */
+
+
+/*CSS Reset*/
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	vertical-align: baseline;
+}
+
+#social-icons{
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
+	border: 0px solid #000000;
+	float: left;
+}
+#company-info-footer{
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
+	border: 0px solid #000000;
+	float: right;
+}
