adding twitter hero-unit and social icons

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,9 +1,9 @@
 <div class="footer">
         
         <div id="social-icons">
-        	<a href="#"><img src="./assets/facebook.png" width="35" height="35" title="facebook" /></a>
-        	<a href="#"><img src="./assets/twitter.png" width="35" height="35" title="twitter" style="margin-left: 15px;" /></a>
-        	<a href="#"><img src="./assets/wordpress.png" width="35" height="35" title="blog" style="margin-left: 15px;" /></a>
+        	<a href="#"><img src="./assets/facebook_logo.png" title="facebook" /></a>
+        	<a href="#"><img src="./assets/twitter_logo.png" title="twitter" style="margin-left: 15px;" /></a>
+        	<a href="#"><img src="./assets/linkedin_logo.png" title="blog" style="margin-left: 15px;" /></a>
         </div>
         <div id="company-info-footer">
         	<p><span><a href="#">Retailer Ordering</a> | <a href="#">Contact Us</a></span>&nbsp;|&nbsp;&copy; Company 2013</p>
