--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,7 @@
-      <!-- Example row of columns -->
+<!--Display page title-->
+<% content_for :title do %> 
+	<title>Cassidy House | Home</title>
+<% end %>
       <div class="row-fluid">
         <div class="span4">
           <h2>Books</h2>
