--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,15 +1,15 @@
       <div class="masthead">
-        <h3 class="muted">Cassidy House</h3>
+        <a href="/index" style="text-decoration: none;"><h3 class="muted">Cassidy House</h3></a>
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container">
               <ul class="nav">
-                <li class="active"><a href="#">Cassidy House</a></li>
+                <li class="active"><a href="/index">Cassidy House</a></li>
                 <li><a href="#">Books</a></li>
                 <li><a href="#">Toys</a></li>
                 <li><a href="#">Community</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
           </div>
@@ -18,7 +18,9 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Cassidy House!</h1>
-        <p class="lead">Cassidy House is a small business that produces kid's books and toys.  We are in the early stages of building an e-commerce enabled website.</p>
-        <a class="btn btn-large btn-success" href="#">Try it today</a>
+      	<div class="hero-unit">
+	        <h1>Cassidy House!</h1>
+	        <p class="lead">Cassidy House is a small business that produces kid's books and toys.  We are in the early stages of building an e-commerce enabled website.</p>
+	        <a class="btn btn-large btn-success" href="#">Try it today</a>
+        </div>
       </div>
