biz description and contact info
Changed the business description and added contact information to the
home page headline.

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -20,7 +20,8 @@
       <div class="jumbotron">
       	<div class="hero-unit">
 	        <h1>Cassidy House!</h1>
-	        <p class="lead">Cassidy House is a small business that produces kid's books and toys.  We are in the early stages of building an e-commerce enabled website.</p>
+	        <p class="lead">Cassidy House produces kid's books and toys.  We are in the early stages of building an e-commerce enabled website.</p>
+	        <p class="lead">Please contact us at scott@cassidybooks.com, or by phone at 650-561-4610</p>
 	        <a class="btn btn-large btn-success" href="#">Try it today</a>
         </div>
       </div>
